<resources>
    <string name="sdk_meditation_no_device_tip_1">Need Flowtime headband to get biofeedback data</string>
    <string name="sdk_heart_rate_unit_bpm">bpm</string>
    <string name="sdk_time_unit">Time（min）</string>
    <string name="sdk_arousal">Arousal</string>
    <string name="sdk_coherence">Coherence</string>
    <string name="sdk_high">HIGH</string>
    <string name="sdk_low">LOW</string>
    <string name="sdk_attention">Attention</string>
    <string name="sdk_normal">MEDIUM</string>
    <string name="sdk_brainwave_spectrum">Brainwave Spectrum</string>
    <string name="sdk_gamma_wave">γ wave</string>
    <string name="sdk_beta_wave">β wave</string>
    <string name="sdk_alpha_wave">α wave</string>
    <string name="sdk_theta_wave">θ wave</string>
    <string name="sdk_delta_wave">δ wave</string>
    <string name="sdk_brainwave">Real-time Brainwave(EEG)</string>
    <string name="sdk_brainwave_legend_right">Right Brain</string>
    <string name="sdk_brianwave_legend_left">Left Brain</string>
    <string name="sdk_heart_rate">Heart Rate</string>
    <string name="sdk_pressure">Pressure</string>
    <string name="sdk_relaxation">Relaxation</string>
    <string name="sdk_pleasure">Pleasure</string>
    <string name="sdk_relaxation_and_attention">Attention &#038; Relaxation</string>
    <string name="sdk_brainwave_spectrum_chart_title">Each band power ratio(%)</string>
    <string name="sdk_hrv">Heart Rate Variability</string>
    <string name="sdk_hrv_simple">HRV</string>
    <string name="sdk_pressure_legend_low">Low</string>
    <string name="sdk_pressure_legend_high">High</string>
    <string name="sdk_hr_chart_legend_low">Low</string>
    <string name="sdk_hr_chart_legend_neutral">Neutral</string>
    <string name="sdk_hr_chart_legend_high">High</string>
    <string name="sdk_max">Max：</string>
    <string name="sdk_min">Min：</string>
    <string name="chart_full_screen_tip">Zoom in on the curve and slide to view it.</string>
    <string name="sdk_chart_title">Changes during meditation</string>
    <string name="sdk_report_high">high</string>
    <string name="sdk_report_nor">med.</string>
    <string name="sdk_report_low">low</string>
    <string name="sdk_report_average">Average:</string>
    <string name="sdk_report_average_2">Average</string>
    <string name="sdk_report_last_7_time_tip_head">The</string>
    <string name="sdk_report_last_7_time_tip_foot_1">is higher than the average of last 7 times.</string>
    <string name="sdk_report_last_7_time_tip_foot_2">is lower than the average of last 7 times.</string>
    <string name="sdk_report_last_7_time_tip_foot_3">is the same as the average of last 7 times.</string>
    <string name="last_7_time"><![CDATA[Last 7 times ->]]></string>
    <string name="sdk_sleep_state">Sleep State</string>
    <string name="sdk_mins">min</string>
    <string name="sdk_second">s</string>
    <string name="sdk_hour">hour</string>
    <string name="sdk_hours">hours</string>
    <string name="sdk_breath_coherence">Breath Coherence</string>
    <string name="sdk_coherence_time">Coherence Time</string>
    <string name="sdk_x_axis_label">Time(min)</string>
    <string name="level_default">--</string>
    <string name="pressure_level_low">Low</string>
    <string name="pressure_level_normal">Medium</string>
    <string name="pressure_level_elevated">Elevated</string>
    <string name="pressure_level_high">High</string>
    <string name="pressure_level_simple_low">low.</string>
    <string name="pressure_level_simple_normal">med.</string>
    <string name="pressure_level_simple_elevated">elev.</string>
    <string name="pressure_level_simple_high">high.</string>
    <string name="report_chart_share">Share</string>
    <string name="report_chart_expand">Expand</string>
    <string name="chart_title_total">TOTAL</string>
    <string name="chart_title_average">AVERAGE</string>
    <string name="chart_coherent">Coherent</string>
    <string name="chart_incoherent">Incoherent</string>
    <string name="chart_state">STATE</string>
    <string name="chart_daily_average_percentage">DAILY AVERAGE PERCENTAGE</string>
    <string name="chart_month_average_percentage">MONTHLY AVERAGE PERCENTAGE</string>
    <string name="chart_daily_average">DAILY AVERAGE</string>
    <string name="chart_monthly_average">MONTHLY AVERAGE</string>
    <string name="chart_daily_total">DAILY TOTAL</string>
    <string name="chart_monthly_total">MONTHLY TOTAL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expand">Expand</string>
</resources>
