<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AffectiveLineChartFullScreenActivity"
        >


    <cn.entertech.uicomponentsdk.report.ReportAffectiveLineChartCard
            android:id="@+id/line_affective_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ralcc_attentionLineColor="#FF6682"
            app:ralcc_highlightLineColor="#DDE1EB"
            app:ralcc_highlightLineWidth="1.5"
            app:ralcc_isTitleMenuIconShow="true"
            app:ralcc_markViewBgColor="#F1F5F6"
            app:ralcc_markViewTitle1="Attention"
            app:ralcc_markViewTitle2="Relaxation"
            app:ralcc_relaxationLineColor="#00ff00"
            app:ralcc_smallTitle="@string/chart_full_screen_tip"
            app:ralcc_title="@string/sdk_chart_title"
            app:ralcc_titleMenuIcon="@drawable/vector_drawable_screen_shrink"
            app:ralcc_xAxisUnit="@string/sdk_x_axis_label"
            />
</LinearLayout>