<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
            android:id="@+id/ll_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="0dp"
            android:orientation="vertical"
            >


        <include layout="@layout/layout_common_card_title" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/activity_margin"
                >

            <cn.entertech.uicomponentsdk.widget.ChartLegendView
                    android:id="@+id/legend_attention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_margin"
                    app:clv_color="#5FC695"
                    app:clv_legend="@string/sdk_attention"
                    />

            <cn.entertech.uicomponentsdk.widget.ChartLegendView
                    android:id="@+id/legend_relaxation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:clv_color="#4B5DCC"
                    app:clv_legend="@string/sdk_relaxation"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

            <LinearLayout
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="right"
                    >

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:layout_alignParentRight="true"
                            android:textSize="12sp"
                            />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:text="0"
                            android:textSize="12sp"
                            />
                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="100"
                            android:textSize="12sp"
                            />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:text="0"
                            android:textSize="12sp"
                            />
                </RelativeLayout>
            </LinearLayout>

            <cn.entertech.uicomponentsdk.widget.CustomLineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
        </LinearLayout>

        <TextView
                android:id="@+id/tv_time_unit_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_margin"
                android:text="@string/sdk_time_unit"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/activity_margin"
                android:orientation="horizontal"
                android:visibility="gone"
                >

            <LinearLayout
                    android:id="@+id/ll_avg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    >

                <TextView
                        android:id="@+id/tv_avg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="平均: 78"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin_half"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="#999999"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                <TextView
                        android:id="@+id/tv_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="最大: 78"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin_half"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="#999999"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal"
                    >

                <TextView
                        android:id="@+id/tv_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="最小: 78"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin_half"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="#999999"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/rl_no_data_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLoadingCoverBg"
            android:visibility="gone"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/sdk_meditation_no_device_tip_1"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal"
                />
    </RelativeLayout>
</FrameLayout>
